--- a/jenkinsfile
+++ b/jenkinsfile
@@ -3,6 +3,6 @@
 roboshop (
         COMPONENT             : 'users',
         PROJECT_NAME          : "todo",
-        SLAVE_LABEL           : "agent",
+        SLAVE_LABEL           : "JAVA",
         SKIP_NEXUS_UPLOAD     : false,
         APP_TYPE              : "NODEJS"
