--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,6 +1,6 @@
 @Library('todo') _
 
-roboshop (
+todo (
         COMPONENT             : 'users',
         PROJECT_NAME          : "todo",
         SLAVE_LABEL           : "JAVA",
