--- a/jenkinsfile
+++ b/jenkinsfile
@@ -5,5 +5,5 @@ todo (
         PROJECT_NAME          : "todo",
         SLAVE_LABEL           : "JAVA",
         SKIP_NEXUS_UPLOAD     : false,
-        APP_TYPE              : "NODEJS"
+        APP_TYPE              : "JAVA"
 )
